--- a/index.html
+++ b/index.html
@@ -3,63 +3,21 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="Imagens/favicon.ico">
 <title>Calculadora de IMC</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        flex-direction: column;
-        background: linear-gradient(320deg, #46FA6C, #41FAE5,#C0FAE0
-        );
-    }
-    #resultado {
-        font-weight: bold;
-    }
-</style>
 </head>
 <body>
     <h1>Calculadora de IMC</h1>
-    <p>Preencha os campos abaixo:</p>
-    <label for="altura">Altura (em metros):</label>
-    <input type="number" id="altura" step="0.01"><br><br>
-    <label for="peso">Peso (em quilogramas):</label>
-    <input type="number" id="peso" step="0.01"><br><br>
-    <button onclick="calcularIMC()">Calcular IMC</button><br><br>
-    <div id="resultado"></div>
-
-    <script>
-        function calcularIMC() {
-            // Obter os valores digitados pelo usuário
-            var altura = parseFloat(document.getElementById("altura").value);
-            var peso = parseFloat(document.getElementById("peso").value);
-
-            // Calcular o IMC
-            var imc = peso / (altura * altura);
-
-            // Exibir o resultado
-            var resultado = document.getElementById("resultado");
-            resultado.innerHTML = "Seu IMC é: " + imc.toFixed(2) + "<br>";
-
-            // Classificar o IMC
-            if (imc < 18.5) {
-                resultado.innerHTML += "Abaixo do peso";
-            } else if (imc >= 18.5 && imc < 25) {
-                resultado.innerHTML += "Peso normal";
-            } else if (imc >= 25 && imc < 30) {
-                resultado.innerHTML += "Sobrepeso";
-            } else if (imc >= 30 && imc < 35) {
-                resultado.innerHTML += "Obesidade grau I";
-            } else if (imc >= 35 && imc < 40) {
-                resultado.innerHTML += "Obesidade grau II";
-            } else {
-                resultado.innerHTML += "Obesidade grau III";
-            }
-        }
-    </script>
+    <div class="caixa-formulario">
+        <p>Preencha os campos abaixo:</p>
+            <label for="altura">Altura (em metros):</label>
+            <input type="number" id="altura" step="0.01"><br><br>
+            <label for="peso">Peso (em quilogramas):</label>
+            <input type="number" id="peso" step="0.01"><br><br>
+            <button id="botao" onclick="calcularIMC()">Calcular IMC</button><br><br>
+        <div id="resultado"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
